[package]
name = "finetime"
description = "High-fidelity time library for applications where sub-nanosecond accuracy and exact arithmetic are needed"
version = "0.2.2"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Quinten-van-Woerkom/finetime"

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[target.'cfg(kani)'.dependencies]
paste = "1.0.15"

[dependencies]
i256 = { version = "0.2.2", features = ["num-traits"] }
lazy_static = "1.5.0"
num = "0.4.3"
tinyvec = "1.9.0"

[build-dependencies]
ureq = "2"
