[package]
name = "finetime"
description = "High-fidelity time library for applications where sub-nanosecond accuracy and exact arithmetic are needed"
version = "0.4.4"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Quinten-van-Woerkom/finetime"

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[target.'cfg(kani)'.dependencies]
paste = "1.0.15"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
i256 = { version = "0.2.2", features = ["num-traits"] }
lazy_static = "1.5.0"
lexical-core = "1.0.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
thiserror = "2.0.17"
tinyvec = "1.9.0"

[build-dependencies]
ureq = "2"

[dev-dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
