[package]
name = "finetime"
description = "High-fidelity time library for applications where sub-nanosecond accuracy and exact arithmetic are needed"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Quinten-van-Woerkom/finetime"

[features]
default = ["serde"]
std = []
serde = ["dep:serde", "std"]

[profile.dev]
opt-level=3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[target.'cfg(kani)'.dependencies]
paste = "1.0.15"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
lexical-core = "1.0.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
